[project]
name = "cerby-account-removal"
authors = [
    { name = "Pedro Santos", email = "pedro@cerby.com" }
]
version = "0.1.0"
description = "Easy to use removal tool to bulk remove accounts from Cerby."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "emoji>=2.14.1",
    "requests>=2.32.4",
]
